--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Dice Game</title>
+    <title>Perya - Online Betting Website</title>
     <link rel="stylesheet" href="style.css">
     <!-- Favicons -->
     <link href="logo.png" rel="icon">
